Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/processing/model/util/directSupersOfErr/DirectSupersOfErr.ref
C1.java:3:18: compiler.err.cant.resolve: kindname.class, Bogus, , 
1 error
